fix: prevent dialog horizontal content overflow in Lumo (#12016)

--- a/packages/vaadin-lumo-styles/src/mixins/resizable-overlay.css
+++ b/packages/vaadin-lumo-styles/src/mixins/resizable-overlay.css
@@ -20,6 +20,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    min-width: 0;
     border-radius: inherit; /* prevent child elements being drawn outside part=overlay */
   }
 
